no golang errors, setMyUserName, doLogin routes
